@@ -75,6 +75,8 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12239. StorageException complaining " no lease ID" when updating
     FolderLastModifiedTime in WASB. (Duo Xu via cnauroth)
 
+    HADOOP-12407. Test failing: hadoop.ipc.TestSaslRPC. (stevel)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
